# ocha

./: README.ja.md  README.md  index.html  package.json  taskfile.yaml  vite.config.ts
.gemini/: GEMINI.md
.github/workflows/: release.yml
docs/: plan.md
scripts/: sync-version.mjs  version.js
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: attachments.rs  auth.rs  groups.rs  mail.rs  mod.rs  settings.rs  tabs.rs
src-tauri/src/db/: mod.rs  models.rs  schema.rs  tabs.rs
src-tauri/src/imap/: client.rs  idle.rs  mod.rs
src-tauri/src/mail/: mod.rs  parser.rs
src-tauri/src/notification/: mod.rs  service.rs
src-tauri/src/oauth/: google.rs  mod.rs
src/atoms/: authAtom.ts  groupsAtom.ts  index.ts  messagesAtom.ts  settingsAtom.ts  uiAtom.ts
src/components/Auth/: LoginScreen.tsx  index.ts
src/components/Chat/: AttachmentCard.tsx  BookmarkListModal.tsx  ChatHeader.tsx  ChatView.tsx  MessageItem.tsx  MessageList.tsx  SearchModal.tsx  index.ts
src/components/Group/: GroupEditModal.tsx  index.ts
src/components/Layout/: AppLayout.tsx
src/components/Settings/: SettingsModal.tsx  index.ts
src/components/Sidebar/: ContextMenu.tsx  GroupItem.tsx  Sidebar.tsx  UnreadBadge.tsx  index.ts
src/components/UI/: ConfirmDialog.tsx  InputDialog.tsx  Modal.tsx  (+1 more)
src/hooks/: index.ts  useAuth.ts  useDraggableScroll.ts  useGroups.ts  useMessages.ts  useTauri.ts
src/i18n/: index.ts
src/types/: index.ts
(+2 files in other folders)
