[package]
name = "ocha"
version = "0.1.20"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ocha_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# OAuth2 & HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }

# IMAP (同期版を使用)
imap = "2"
native-tls = "0.2"

# Email parsing
mailparse = "0.15"
base64 = "0.22"

# Utilities
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
once_cell = "1"
url = "2"
rand = "0.8"
sha2 = "0.10"
urlencoding = "2"
dirs = "6"
open = "5"
